# Sources/Server/Node/FrontendNode.swift
@@ -1,8 +1,4 @@
-import HummingbirdWSCore
-import HummingbirdWebSocket
 import Hummingbird
-import OpenAPIHummingbird
-import OpenAPIRuntime
 import Foundation
 import API
 import Backend
@@ -12,7 +8,8 @@ import Distributed
 import DistributedCluster
 import PostgresNIO
 import VirtualActor
-import WebSocket
+import OpenAPIHummingbird
+import OpenAPIRuntime
 
 /// Doesn't look quite elegant and not sure if it's a correct way of handling things.
 /// Also, how do you load balance HBApplication? 🤔
@@ -24,7 +21,7 @@ distributed actor FrontendNode {
     case noDatabaseAvailable
     case environmentNotSet
   }
-
+  
   
   init(
     actorSystem: ClusterSystem
@@ -38,24 +35,22 @@ distributed actor FrontendNode {
     let persistence = try await Persistence(
       type: .postgres(config)
     )
-    let router = Router()
-    let wsRouter = Router(context: BasicWebSocketRequestContext.self)
-    let handler = RestApi(persistence: persistence)
-    try handler.registerHandlers(on: router)
-    let connectionManager = WebSocketConnection(
+    let serverClientConnection = ServerClientConnection(
       actorSystem: actorSystem,
       persistence: persistence
     )
-    WebSocketApi.configure(
-      wsRouter: wsRouter,
-      connectionManager: connectionManager
+    let router = Router()
+    let handler = RestApi(
+      serverClientConnection: serverClientConnection,
+      persistence: persistence
+    )
+    try handler.registerHandlers(on: router)
+    let connectionManager = ServerClientConnection(
+      actorSystem: actorSystem,
+      persistence: persistence
     )
     var app = Application(
       router: router,
-      server: .http1WebSocketUpgrade(
-        webSocketRouter: wsRouter,
-        configuration: .init(extensions: [])
-      ),
       configuration: .init(
         address: .hostname(
           self.actorSystem.cluster.node.host,
@@ -64,7 +59,7 @@ distributed actor FrontendNode {
         serverName: "frontend"
       )
     )
-    app.addServices(connectionManager)
+//    app.addServices(connectionManager)
     try await app.runService()
   }
 }
@@ -112,8 +107,48 @@ extension FrontendNode {
 
 /// Not quite _connection_ but will call for now.
 struct RestApi: APIProtocol {
+  
+  let serverClientConnection: ServerClientConnection
+  
+  func sendMessage(_ input: Operations.sendMessage.Input) async throws -> Operations.sendMessage.Output {
+    try await serverClientConnection.handleMessage(input)
+    return .ok(.init())
+  }
+  
+  func getMessages(_ input: Operations.getMessages.Input) async throws -> Operations.getMessages.Output {
+    let eventStream = await self.serverClientConnection.getStream(info: input)
+    // Default to `application/jsonl`, if no other content type requested through the `Accept` header.
+    let chosenContentType = input.headers.accept.sortedByQuality().first ?? .init(contentType: .application_jsonl)
+    let responseBody: Operations.getMessages.Output.Ok.Body = switch chosenContentType.contentType {
+    case .application_jsonl, .other:
+      .application_jsonl(
+        .init(eventStream.asEncodedJSONLines(), length: .unknown, iterationBehavior: .single)
+      )
+    case .application_json_hyphen_seq:
+      .application_json_hyphen_seq(
+        .init(eventStream.asEncodedJSONSequence(), length: .unknown, iterationBehavior: .single)
+      )
+    case .text_event_hyphen_stream:
+      .text_event_hyphen_stream(
+        .init(
+          eventStream.map { message in
+            ServerSentEventWithJSONData(
+              event: "message",
+              data: message,
+              id: UUID().uuidString,
+              retry: 10_000
+            )
+          }.asEncodedServerSentEventsWithJSONData(),
+          length: .unknown,
+          iterationBehavior: .single
+        )
+      )
+    }
+    return .ok(.init(body: responseBody))
+  }
+  
   let persistence: Persistence
-
+  
   func searchRoom(_ input: API.Operations.searchRoom.Input) async throws -> API.Operations.searchRoom.Output {
     let rooms = try await persistence
       .searchRoom(query: input.query.query)
